# projectSchedules

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Classes/: Classes.cpp  Classes.h  DataBase.h  Database.cpp  Database.h  Lecture.cpp  Lecture.h  Menu.cpp  Menu.h  Program.cpp  Program.h  Request.cpp  Request.h  Request2.cpp  Request2.h  Student.cpp  Student.h  Uc.cpp  Uc.h  UcClass.cpp  UcClass.h  dataBase.cpp  dataBase.h
Menus/: mainMenu.txt  requestsMenu  scheduleSubMenu.txt  scheduleSubMenu2.txt  searchSubMenu.txt  showMenu.txt  showSubMenu.txt  sortMenu.txt
files/: archive.csv  students_classes.csv
